--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "discord.js": "^13.1.0",
+    "dotenv": "^10.0.0",
     "fastest-levenshtein": "^1.0.12",
     "ms": "^2.1.3"
   }
