--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=16"
+  },
+  "engineStrict": true,
   "dependencies": {
     "chalk": "^4.1.2",
     "discord.js": "^13.1.0",
